# educational_DESCUR

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  amplitud.f  descur.f  fixaray.f  funct.f  getangle.f  getcarg.f90  getrz.f  inguess.f  printit.f  restart.f  scrunch.f  second0.f  vname0.f
